// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  className="sc-bbmXgH ecpPdX"
>
  <div
    className="sc-gGBfsJ jKcKMF"
    color="#38A9DB"
  />
  <span
    className="sc-jnlKLf gmSzmg"
  >
    Chart Legend
  </span>
</div>
`;

exports[`renders correctly with dashed prop 1`] = `
<div
  className="sc-bbmXgH ecpPdX"
>
  <div
    className="sc-gGBfsJ kpfjvU"
    color="#38A9DB"
  />
  <span
    className="sc-jnlKLf gmSzmg"
  >
    Chart Legend
  </span>
</div>
`;
